# dhall-text-shell

./: CHANGELOG.md  LICENSE  README.md  dhall-text-shell.cabal
app/: dhall-text-shell.hs
src/Dhall/: TextShell.hs
