cabal-version:       2.4
name:                dhall-text-shell
version:             0.1.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/mstksg/dhall-text-shell
bug-reports:         https://github.com/mstksg/dhall-text-shell/issues
license:             MIT
license-file:        LICENSE
author:              Justin Le
maintainer:          Justin Le <justin@jle.im>
copyright:           2021 Justin Le
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/mstksg/dhall-text-shell.git

common common-options
  build-depends:       base >= 4.11.0.0 && < 5
                     , containers
                     , dhall
                     , filepath
                     , optparse-applicative
                     , process
                     , text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Dhall.TextShell

executable dhall-text-shell
  import:              common-options
  hs-source-dirs:      app
  main-is:             dhall-text-shell.hs
  build-depends:       dhall-text-shell
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

